# ice

./: .gitignore  BACKEND.md  FRONTEND.md  README.md  fozzy.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/scripts/: package-tauri.mjs  verify-release.mjs  verify-tauri.mjs
frontend/src/: main.tsx
frontend/src/hooks/: useMenuEvents.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/app/: events.rs  mod.rs  paths.rs  startup.rs  state.rs
src-tauri/src/browser/: service.rs
src-tauri/src/codex/: service.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/fs/: service.rs
src-tauri/src/git/: service.rs
src-tauri/src/ipc/: commands.rs  dto.rs  errors.rs  mod.rs
src-tauri/src/persistence/: db.rs
src-tauri/src/projects/: models.rs  service.rs
src-tauri/src/security/: approvals.rs
src-tauri/src/terminal/: service.rs
src-tauri/src/workspace/: service.rs
tests/: backend.approval_policy.fozzy.json  backend.browser_bridge.fozzy.json  backend.browser_contract.fozzy.json  backend.codex_recovery.fozzy.json  backend.fs_editor.fozzy.json  backend.fs_tree.fozzy.json  backend.git_events.fozzy.json  backend.git_history.fozzy.json  backend.git_mutation.fozzy.json  backend.persistence_schema.fozzy.json  backend.project_sidebar.fozzy.json  backend.startup_layout.fozzy.json  backend.terminal_diagnostics.fozzy.json  backend.terminal_lifecycle.fozzy.json  frontend.release_bundle.fozzy.json
(+69 files in other folders)
