[package]
name = "ice_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "ice_backend"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
parking_lot = "0.12"
portable-pty = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
